fix(headfoot.css): clean up scrollbar styles and ensure consistent application

--- a/assets/css/headfoot.css
+++ b/assets/css/headfoot.css
@@ -18,7 +18,7 @@ img {
     -webkit-user-drag: none;
     user-drag: none;
     user-select: none;
-    pointer-events: auto; /* still allows clicks */
+    pointer-events: auto;
 }
 
 .hide-scrollbar {
@@ -113,8 +113,12 @@ header {
     white-space: nowrap;
     display: inline-block;
     padding: 20px 15px;
-    transition: color 0.3s ease-in-out, text-shadow 0.1s ease-in-out,
-    transform 0.3s ease-in-out, margin 0.3s ease-in-out, padding 0.3s ease-in-out;
+    transition:
+        color 0.3s ease-in-out,
+        text-shadow 0.1s ease-in-out,
+        transform 0.3s ease-in-out,
+        margin 0.3s ease-in-out,
+        padding 0.3s ease-in-out;
 }
 
 .main-nav a:hover {
