--- a/pages/assets/css/headfoot.css
+++ b/pages/assets/css/headfoot.css
@@ -23,14 +23,21 @@ img {
 
 .hide-scrollbar {
     overflow: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
     width: 0;
     height: 0;
+}
+
+.hide-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none;
 }
 
 /* HEADER */
